Some refactoring on the representation of supporter for timelines.
The supporting part of the timeline is now described by the position in the timeline
ignoring all assignement statements. This number immutable as only the end of the timeline can be extended.